--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "jose": "^3.6.2",
     "node-fetch": "^2.6.1",
+    "socket.io": "^3.1.1",
     "twilio": "^3.56.0"
   }
 }
